# S32K144EVB-Tock

./: Cargo.toml  README.md  rustc-ice-2025-02-24T14_48_44-21909.txt
boards/: Makefile.common
boards/s32k144evb/: Cargo.toml  Makefile  layout.ld  new_s32dumps
boards/s32k144evb/.cargo/: config.toml
boards/s32k144evb/src/: backup_main.rs  main.rs
chips/s32k144/: Cargo.toml
chips/s32k144/src/: chip.rs  clock.rs  ftm0.rs  gpio.rs  interrupt_service.rs  lib.rs  lpit0.rs  lptmr0.rs  lpuart0.rs  new_chip.rs  nvmc.rs  peripheral_interrupts.rs  pinmux.rs  power.rs  rtc.rs  tmp_chip.rs
kernel/src/: lib.rs
