# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "s32k144evb"
version.workspace = true
authors.workspace = true
build = "../build.rs"
edition.workspace = true

[dependencies]
cortexm4f = { path = "../../arch/cortex-m4f" }
cortexm4 = { path = "../../arch/cortex-m4" }
kernel = { path = "../../kernel" }
components = { path = "../components" }

cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
bit_field = "0.9.0"
embedded_types = "0.3.2"
rtt-target =  "0.6.1"
s32k144 = { path = "../../chips/s32k144"}
critical-section = "1.2.0"

capsules-core = { path = "../../capsules/core" }
capsules-extra = { path = "../../capsules/extra" }
capsules-system = { path = "../../capsules/system" }

[build-dependencies]
tock_build_scripts = { path = "../build_scripts" }

[lints]
workspace = true
