# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "s32k144"
version = "0.2.3-dev"
authors.workspace = true
edition.workspace = true

[dependencies]
cortexm4f = { path = "../../arch/cortex-m4f" }
cortexm = { path = "../../arch/cortex-m" }
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
vcell = "0.1.3"


[lints]
workspace = true
